fix: form-group text-align

--- a/src/styles/components/_form-group.scss
+++ b/src/styles/components/_form-group.scss
@@ -1,5 +1,5 @@
 .form-group {
-  width: 100%;
+  text-align: left;
 
   &__label {
     color: $border-color;
